[workspace]
resolver = "2"

members = [
	"native/pact_consumer_nif",
]

[profile.release]
debug = 2

[workspace.dependencies]
rustler = "0.36.1"
pact_consumer = { version = "1.3.3", default-features = false,  features = ["datetime"]}
pact_models = "1.2.7"
serde_json = "1.0.140"
futures = "0.3.31"
regex = "1.11.1"
log = "0.4.27"
env_logger = "0.11.8"
