[workspace]
resolver = "2"

members = [
	"native/pact_consumer_nif",
]

[profile.release]
debug = 2

[workspace.dependencies]
rustler = "0.37.2"
pact_consumer = { version = "1.4.2", default-features = false,  features = ["datetime", "plugins"]}
pact_models = "1.3.7"
serde_json = "1.0.149"
futures = "0.3.31"
regex = "1.12.3"
log = "0.4.29"
env_logger = "0.11.8"
tokio = { version = "1.49", features = ["rt"] }
