[workspace]
resolver = "2"

members = [
	"native/pact_consumer_nif",
]

[profile.release]
debug = 2

[workspace.dependencies]
rustler = "0.38.0"
pact_consumer = { version = "1.4.3", default-features = false,  features = ["datetime", "plugins"]}
pact_models = "1.3.10"
serde_json = "1.0.150"
futures = "0.3.32"
regex = "1.12.2"
log = "0.4.30"
env_logger = "0.11.10"
tokio = { version = "1.52", features = ["rt"] }
